--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
-    "resend": "^6.5.2"
+    "resend": "^6.5.2",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
