--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
     "resend": "^6.5.2",
+    "slugify": "^1.6.6",
     "validator": "^13.15.23"
   },
   "devDependencies": {
