--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "resend": "^6.5.2",
     "slugify": "^1.6.6",
